--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jogo da Memória</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-<body>
-    
+<body>        
+    <div class="divteste">No render</div>
+    <script src="App.js"></script>
 </body>
 </html>
