--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>        
-    <div class="divteste">No render</div>
+    <div id="root">No render</div>
     <script src="App.js"></script>
 </body>
 </html>
