--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jogo da Memória</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>        
-    <div id="root">No render</div>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <div id="modal"></div>
+    <div id="root">Not rendered</div>
     <script src="App.js"></script>
-</body>
+  </body>
 </html>
